# backend

./: Cargo.toml  README.md
docs/: api.md
src/: lib.rs  service.rs  storage.rs
src/endpoints/: filters.rs  handlers.rs  mod.rs
src/service/: mod.rs  nuggit.rs
src/storage/: inmemory.rs  mod.rs
tests/: enpoints.rs  service.rs  service_nuggit.rs  storage.rs  storage_inmemory.rs
tests/mock/: storage.rs
