[package]
name = "nuggit"
version = "0.0.1-alpha.0"
authors = ["Elisey Zanko <elisey.zanko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.30"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.52"
tokio = { version = "0.2.20", features = ["macros", "rt-threaded", "sync"] }
warp = "0.2.2"
